# It-bootcamp

./: .coverage  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.ci.yml  docker-compose.yml  manage.py  mypy.ini  pyproject.toml
.github/workflows/: main.yml
booksandauthors/: admin.py  apps.py  forms.py  urls.py  views.py
booksandauthors/management/commands/: init_admin.py  make_base.py
booksandauthors/migrations/: 0001_initial.py  0002_book_genre.py  0003_genre_remove_book_genre_book_genre.py  0004_alter_author_options_alter_book_options_and_more.py  0005_alter_genre_options_alter_book_author_and_more.py
booksandauthors/models/: __init__.py  author.py  book.py  genre.py
booksandauthors/templates/: author_confirm_delete.html  author_create.html  author_detail.html  authors_detail.html  authors_list.html  base.html  book_confirm_delete.html  book_detail.html  books_list.html  confirm_delete.html  create.html  genres_list.html
booksandauthors/tests/: base.py  test_admin.py  test_author_create.py  test_author_detail.py  test_author_list_view.py  test_book_create.py  test_book_detail.py  test_book_list_view.py  test_genre_create.py  test_genre_list_view.py
it_bootcamp/: asgi.py  settings.py  urls.py  wsgi.py
