[tool.poetry]
name = "it-bootcamp"
version = "0.1.0"
description = ""
authors = ["ArtsiomPH"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.7"
psycopg2-binary = "^2.9.5"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
djangorestframework = "^3.14.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.5.2"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"